--- a/HW4.Rmd
+++ b/HW4.Rmd
@@ -552,7 +552,7 @@ In several cases our model's scoring function appears to have a roughly 50% chan
 
 We develop three main models including a K-Clustering Method, Gradient Boosting method, and Support Vector Machines (SVM). Each focuses on a particular strategy. Our clustering attempts to identify groups of variables that are similar and use them to assess a patient's risk of attempting suicide. Gradient Boosting constructs decision trees with an emphasis on returning the most accurate decision path and our Support Vector Machine uses linear regression to classify the factors into groups using hyperplanes and by assessing the classes likelihood of being our target variable.  
 
-## K-Clustering Method
+## K-Clustering Method 1
 
 We use K-nearest neighbor (KNN) to identify clusters of patients that share similar patterns that could help us predict our target variable. KNN works by identifying the "k" closest neighbors in the dataset. This works particularly well for classification of factorized data, as our dataset happens to be. Results of this model's construction are shown below. 
 
@@ -608,9 +608,9 @@ conf.mat.knn
 
 Our KNN model accuracy comes out to `r round(conf.mat.knn$overall[[1]], 3)*100`%. We note that the ideal number of k was experimentally determined by running through several simulated model and testing the accuracy of each. The most accurate model was our final choice. 
 
-## Hierarchical Clustering
+## K-Clustering Method 2
 
-In this unsupervised learning method we attempt to identify clear orders of factor and their respective levels across the dataset. To do this we isolate those factors, center and scale the values, and
+In this we use a special kind of K-means method where we attempt to identify clear grouping of factors and their respective levels across the dataset. To do this we isolate those factors, center and scale the values, and focus on the mean  euclidean distances between values. This method assumes there is an inherent similarity across values in the dataset including similarities with our target variable. The goal is to use these similarities (should there be any) to identify the groups closest to our target. If there are any groups, we would assume that they contain the patients who are at the highest risk of attempting suicide. Based on the data characteristics and summary from our EDA, we should not expect much from this model but it should prove informative.  
 
 
 ```{r}
@@ -642,13 +642,12 @@ train.heir <- (train_heir[, names(train_heir) != "Suicide"])
 prep <- preProcess(x = train.heir, method = c("center", "scale"))
 cl <- trainControl(method="repeatedcv", repeats = 5) 
 heir_model <- train(Suicide ~ ., data = train_heir, 
-                method = "heir", 
+                method = "knn", 
                 trControl = cl, 
                 preProcess = c("center","scale"), 
                 tuneLength = 20)
 heir_model 
 ```
-
 
 
 ```{r}
@@ -659,6 +658,48 @@ conf.mat.heir <- confusionMatrix(heir_predict, test_heir$Suicide)
 accuracy <- round(conf.mat.heir$overall[[1]], 3)*100
 ```
 
+Our k value was experimentally determined to be significantly smaller for this model. As expected, the model's accuracy decreased since we were trying to group variable based similarities that we suspected would not be present in the data. However, this does confirm our expectations that there are fewer patterns between the target and all variables clustered together. When compared with smaller groups and more isolated variables, this tells us there may be a handful of important variables that predict our target better than all of them combined. 
+
+
+## Heirarchical Clustering
+
+In this we use a special kind of unsupervised learning method where we attempt to identify clear orders of factor and their respective levels across the dataset. To do this we isolate those factors, center and scale the values, remove our target from the data set, and review the results. Perhaps the easiest way to do this is with a dendrogram, as shown below. 
+
+```{r}
+set.seed(622)
+
+# Clean up training data
+training_factors <- training %>% 
+  na.omit() %>% 
+  dplyr::select(-Age, -`ADHD Total`, -`MD TOTAL`) 
+training_factors <- data.frame(lapply(training_factors, as.factor))
+train_heir <- training_factors %>% 
+  mutate(across(everything(), ~replace_na(., mode(.))))
+
+# Clean up testing data
+testing_factors <- testing %>% 
+  na.omit() %>% 
+  dplyr::select(-Age, -`ADHD Total`, -`MD TOTAL`) 
+testing_factors <- data.frame(lapply(testing_factors, as.factor))
+test_heir <- testing_factors %>% 
+  mutate(across(everything(), ~replace_na(., mode(.))))
+
+# Create Euclidean Dissimilarity Matrix 
+train.heir <- (train_heir[, names(train_heir) != "Suicide"])
+d <- dist(train.heir, method = "euclidean")
+# Hierarchical clustering using Complete Linkage
+hc1 <- hclust(d, method = "complete" )
+# Plot the obtained dendrogram
+# Cut tree into groups
+sub_grp <- cutree(hc1, k = 3)
+train.heir %>%
+  mutate(cluster = sub_grp) %>% 
+  head()
+plot(hc1, cex = 0.6)
+rect.hclust(hc1, k = 3, border = 2:5)
+```
+
+Given that this dendrogram contains 53 variables, each labeled by their index value, we notice 3 large groups. These generally correspond to ADHD questions, Mood Disorder questions, and all other questions. However, there is a clear seperate branch of the dendrogram boxed in red. This mainly contains ADHD questions. This is interesting since it suggest the patient's responses to these questions have greater impact on the patient's risk of suicide. Alternatively, it could signify that the groups have little in common but at smaller sizes of k there may be significant predictors. We should learn more with the support vector machine. 
 
 
 ## Support Vector Machine
@@ -782,7 +823,14 @@ We can see that model Gradient Boosted model has the best accuracy at 77.5% when
                   conf.mat.svnlin$overall, 
                   conf.mat.svnrad$overall, 
                   conf.mat.svnpoly$overall, 
-                  conf.mat.xgboost$overall), 3))  %>%
+                  conf.mat.xgboost$overall), 3)) %>%
+  rename(KNN = conf.mat.knn.overall, 
+         HC = conf.mat.heir.overall,
+         LIN = conf.mat.svnlin.overall,
+         RAD = conf.mat.svnrad.overall,
+         PLY = conf.mat.svnpoly.overall,
+         XGB = conf.mat.xgboost.overall) %>% 
+  t() %>%
   kbl(booktabs =  T, caption = "Model Performance") %>% 
   kable_styling(latex_options = c("striped, HOLD_position"), full_width = F) %>%
   footnote(c(
@@ -806,6 +854,8 @@ https://towardsdatascience.com/what-is-the-difference-between-pca-and-factor-ana
 https://scholarworks.umass.edu/cgi/viewcontent.cgi?article=1226&context=pare
 
 http://www.sthda.com/english/articles/31-principal-component-methods-in-r-practical-guide/118-principal-component-analysis-in-r-prcomp-vs-princomp/
+
+https://uc-r.github.io/hc_clustering
 
 https://rdrr.io/r/stats/prcomp.html
 
